[gd_scene load_steps=34 format=2]

[ext_resource path="res://images/background03.jpg" type="Texture" id=1]
[ext_resource path="res://Player/player02Scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://FishesScenes/fishLevel1Scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://menuScene/menuAndPoints.tscn" type="PackedScene" id=4]
[ext_resource path="res://CHAPTER3.gd" type="Script" id=5]
[ext_resource path="res://font/Avocado Creamy.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://font/Brightly Crush Shine.otf" type="DynamicFontData" id=7]
[ext_resource path="res://images/gameBox.png" type="Texture" id=8]
[ext_resource path="res://finishBox3.gd" type="Script" id=9]
[ext_resource path="res://FishesScenes/SharkPluScenes.tscn" type="PackedScene" id=10]
[ext_resource path="res://FishesScenes/jellyFishScene.tscn" type="PackedScene" id=11]
[ext_resource path="res://FishesScenes/fishLevel6Scene.tscn" type="PackedScene" id=12]
[ext_resource path="res://FishesScenes/fishLevel5Scene.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/shark1.png" type="Texture" id=14]
[ext_resource path="res://images/fishlv6.png" type="Texture" id=15]
[ext_resource path="res://images/flv4l1.png" type="Texture" id=16]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://introChapMess.gd" type="Script" id=18]
[ext_resource path="res://images/sharkleft0.png" type="Texture" id=19]
[ext_resource path="res://images/sparkel.png" type="Texture" id=20]
[ext_resource path="res://images/player02L2.png" type="Texture" id=21]
[ext_resource path="res://musicScene/musicScene.tscn" type="PackedScene" id=24]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.913725, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0235294, 0.0470588, 0.290196, 0.564706 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.168627, 0.823529, 0.890196, 0.564706 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.933333, 0.666667, 0.286275, 0.901961 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.909804, 0.427451, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.909804, 0.427451, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.588235, 0.113725, 0.0352941, 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 17 )

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="background3" type="Sprite" parent="."]
position = Vector2( 520, 300 )
scale = Vector2( 2.3, 2.2 )
texture = ExtResource( 1 )

[node name="fishLevel1(1)" parent="." instance=ExtResource( 3 )]

[node name="fishLevel1(2)" parent="." instance=ExtResource( 3 )]

[node name="fishLevel1(3)" parent="." instance=ExtResource( 3 )]

[node name="fishLevel1(4)" parent="." instance=ExtResource( 3 )]

[node name="fishLevel1(4)2" parent="." instance=ExtResource( 3 )]

[node name="JellyFish1" parent="." instance=ExtResource( 11 )]

[node name="JellyFish2" parent="." instance=ExtResource( 11 )]

[node name="JellyFish3" parent="." instance=ExtResource( 11 )]

[node name="fishLevel5(1)" parent="." instance=ExtResource( 13 )]

[node name="fishLevel5(2)" parent="." instance=ExtResource( 13 )]

[node name="fishLevel5(2)2" parent="." instance=ExtResource( 13 )]

[node name="fishLevel6(1)" parent="." instance=ExtResource( 12 )]

[node name="fishLevel6(1)2" parent="." instance=ExtResource( 12 )]

[node name="SharkPlus" parent="." instance=ExtResource( 10 )]

[node name="SharkPlus2" parent="." instance=ExtResource( 10 )]
position = Vector2( 14, 13 )

[node name="Panel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 7.0
margin_right = 4.0
margin_bottom = 7.0
color = Color( 0.054902, 0.0431373, 0.0431373, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 500, 300 )

[node name="finishBox" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="mesage" type="Label" parent="finishBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -753.0
margin_top = -450.0
margin_right = -270.0
margin_bottom = -272.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.447059, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgain" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -673.0
margin_right = -253.0
margin_bottom = -557.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = " play again "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backToStart" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -457.0
margin_right = -253.0
margin_bottom = -350.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = " start "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -250.0
margin_right = -253.0
margin_bottom = -147.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = " quit "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" parent="." instance=ExtResource( 4 )]

[node name="fishLV5" type="Sprite" parent="menu"]
position = Vector2( 450, 58 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 16 )

[node name="fishLV6" type="Sprite" parent="menu"]
position = Vector2( 480, 58 )
scale = Vector2( 0.13, 0.15 )
texture = ExtResource( 15 )

[node name="fishLV7" type="Sprite" parent="menu"]
position = Vector2( 515, 58 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 14 )

[node name="music" parent="." instance=ExtResource( 24 )]

[node name="introCHAPTER3" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="intro" type="Panel" parent="introCHAPTER3"]
margin_left = 40.0
margin_top = 30.0
margin_right = 990.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introButton" type="Button" parent="introCHAPTER3/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 190.0
margin_right = 50.0
margin_bottom = 230.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="introCHAPTER3/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.0
margin_top = -205.0
margin_right = 399.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="introCHAPTER3/intro"]
position = Vector2( 730, 164.5 )
scale = Vector2( 0.0853334, 0.0833333 )
texture = ExtResource( 21 )

[node name="shark" type="Sprite" parent="introCHAPTER3/intro"]
position = Vector2( 683.5, 389 )
scale = Vector2( 0.539648, 0.442786 )
texture = ExtResource( 19 )

[node name="not" type="Sprite" parent="introCHAPTER3/intro/shark"]
position = Vector2( -170.869, -9.15527e-05 )
scale = Vector2( 1.362, 1.58288 )
texture = ExtResource( 20 )
[connection signal="pressed" from="finishBox/playAgain" to="finishBox" method="_on_playAgain_pressed"]
[connection signal="pressed" from="finishBox/backToStart" to="finishBox" method="_on_backToStart_pressed"]
[connection signal="pressed" from="finishBox/quit" to="finishBox" method="_on_quit_pressed"]
[connection signal="pressed" from="introCHAPTER3/intro/introButton" to="." method="_on_introButton_pressed"]
